<resources>
    <string name="app_name">Registro</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="correo">Correo electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="tvRegistro">¿No tienes una cuenta? Registrate</string>
    <string name="etName">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="registro_email">Correo</string>
    <string name="registro_contrasenia">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="registrar">Registrar</string>
    <string name="volver">Volver</string>
    <string name="vaciar">Vaciar</string>
    <string-array name="perfiles">
        <item>Usuario</item>
        <item>Invitado</item>
        <item>Administrador</item>
    </string-array>
</resources>