<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/etName"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/registro_email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/registro_contrasenia"
            android:inputType="textPassword"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/telefono"
            android:inputType="textPassword"
            android:padding="12dp" />
        <Spinner
            android:id="@+id/spinerPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="12dp"
            android:entries="@array/perfiles"
             />
        <Spinner
            android:id="@+id/spinerNacionalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="12dp"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegiistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="0.5"
                android:text="@string/registrar"
                android:layout_marginEnd="12dp" />

            <Button
                android:id="@+id/Volver"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/volver"
                android:layout_marginStart="12dp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>